gcc/testsuite/gm2/iso/const/fail/testim.mod
MODULE testim ;

CONST
   foo = IM (cmplx) ;

VAR
   cmplx: COMPLEX ;
BEGIN

END testim.
